prevent disable/remove btns from overflowing card

--- a/inst/css/filter-panel.css
+++ b/inst/css/filter-panel.css
@@ -271,7 +271,7 @@ a.remove_all:hover {
 
 .filter-card-controls {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   gap: 1em;
   grid-area: controls;
 }
